--- a/src/client/css/main.scss
+++ b/src/client/css/main.scss
@@ -2,6 +2,7 @@
 @import "overridemedia";
 @import "flexlayout";
 @import 'fonts.css';
+@import 'marginpadding';
 
 /* Reset */
 
@@ -64,6 +65,9 @@ li {
   margin-right: auto;
   // padding: 16px 0;
   // background-color: #EEE;
+  &.progress-blured{
+    filter:blur(2px);
+  }
 }
 
 // @media ($mat-small) {
@@ -95,8 +99,9 @@ li {
 }
 
 .page-title {
-  font-size: 18px;
-  font-weight: 300;
+  font-size: 16px;
+  text-transform: uppercase;
+  font-weight: 700;
   color: #225FA2;
   margin-top: 0;
 }
@@ -104,13 +109,30 @@ li {
 .content-title {
   font-size: 16px;
   font-weight: 300;
-  color: #225FA2;
+  color: #555;
   margin-top: 0;
 }
 
+.info-content{
+  padding: 16px 0;
+  &>p.title{
+    font-size: 14px;
+    font-weight: 700;
+    color: #555;
+    margin: 0;
+  }
+  &>p.info{
+    font-size: 14px;
+    font-weight: 300;
+    color: #666;
+    margin: 0;
+  }
+}
+
 a.content-link {
+  
   text-decoration: none;
-  font-size: 16px;
+  font-size: 14px;
   color: #2260A4;
   text-transform: capitalize;
   font-weight: 300;
@@ -159,6 +181,9 @@ md-radio-group>label {
   font-weight: 700;
   vertical-align: bottom;
 }
+
+
+
 
 @import '@angular/material/core/theming/prebuilt/deeppurple-amber.scss';
 // @import 'responsivegrid.css';
