--- a/src/client/css/_flexlayout.scss
+++ b/src/client/css/_flexlayout.scss
@@ -57,3 +57,7 @@ $flex-container-padding-size: 16px;
   align-items: center;
   // justify-content: center;
 }
+
+div[fxLayout="column"] .flex-grid{
+  flex: 1 1 auto !important;
+}
