--- a/src/client/app/shared/copa-wci/components/selection-card.component.scss
+++ b/src/client/app/shared/copa-wci/components/selection-card.component.scss
@@ -11,6 +11,7 @@ $selection-check-width: 50px;
     &>.selection-check {
         // min-height: 100px;
         width: $selection-check-width;
+        flex:0 0 auto;
         align-items: center;
         justify-content: center;
         display: flex;
