--- a/src/client/css/main.scss
+++ b/src/client/css/main.scss
@@ -63,10 +63,14 @@ li {
   max-width: 960px;
   margin-left: auto;
   margin-right: auto;
+  width: 100%;
+  // background-color: #FFF;
+  // box-shadow: 0 0 4px rgba(0,0,0,0.3);
+  // flex: 1;
   // padding: 16px 0;
   // background-color: #EEE;
-  &.progress-blured{
-    filter:blur(2px);
+  &.progress-blured {
+    filter: blur(2px);
   }
 }
 
@@ -113,15 +117,15 @@ li {
   margin-top: 0;
 }
 
-.info-content{
+.info-content {
   padding: 16px 0;
-  &>p.title{
+  &>p.title {
     font-size: 14px;
     font-weight: 700;
     color: #555;
     margin: 0;
   }
-  &>p.info{
+  &>p.info {
     font-size: 14px;
     font-weight: 300;
     color: #666;
@@ -130,7 +134,6 @@ li {
 }
 
 a.content-link {
-  
   text-decoration: none;
   font-size: 14px;
   color: #2260A4;
@@ -182,8 +185,57 @@ md-radio-group>label {
   vertical-align: bottom;
 }
 
+.message-container {
+  width: 100%;
+  background-color: #f5f5f5;
+  box-shadow: inset 0 4px 4px -4px rgba(0, 0, 0, 0.3), inset 0 -4px 4px -4px rgba(0, 0, 0, 0.3), 4px 0 0 0 #f5f5f5, -4px 0 0 0 #F5F5F5;
+  transition: all 250ms ease-in-out;
+  min-height: 0;
+}
 
+.message-container>.message {
+  display: table;
+  padding: 8px;
+  width: 100%;
+  border-bottom: 1px solid #FFF;
+}
 
+.message-container>.message:last-child {
+  border-bottom: none;
+}
+
+.message>.mat-icon {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.message>p {
+  display: table-cell;
+  vertical-align: middle;
+  padding-left: 5px;
+  margin: 0;
+  font-size: 14px;
+}
+
+.message.error>p,
+.message.error>.mat-icon {
+  color: #D9534F;
+}
+
+.message.warning>p,
+.message.warning>.mat-icon {
+  color: #F0AD4E;
+}
+
+.message.info>p,
+.message.info>.mat-icon {
+  color: #337AB7;
+}
+
+.message-container.active {
+  padding: 0;
+  min-height: 60px;
+}
 
 @import '@angular/material/core/theming/prebuilt/deeppurple-amber.scss';
 // @import 'responsivegrid.css';
