--- a/src/client/css/main.scss
+++ b/src/client/css/main.scss
@@ -187,10 +187,11 @@ md-radio-group>label {
 
 .message-container {
   width: 100%;
+  position: relative;
   background-color: #f5f5f5;
   box-shadow: inset 0 4px 4px -4px rgba(0, 0, 0, 0.3), inset 0 -4px 4px -4px rgba(0, 0, 0, 0.3), 4px 0 0 0 #f5f5f5, -4px 0 0 0 #F5F5F5;
   transition: all 250ms ease-in-out;
-  min-height: 0;
+  max-height: 0;
 }
 
 .message-container>.message {
@@ -234,7 +235,30 @@ md-radio-group>label {
 
 .message-container.active {
   padding: 0;
-  min-height: 60px;
+  max-height: 200px;
+}
+
+.message-container>.expander {
+  position: absolute;
+  bottom: -15px;
+  left: 50%;
+  margin-left: -20px;
+  padding: 0 10px;
+  background-color: #f5f5f5;
+  border-radius: 0 0 4px 4px;
+  box-shadow: 0 3px 4px 0px rgba(0, 0, 0, 0.3);
+  display: none;
+  cursor: pointer;
+}
+
+.message-container.active>.expander {
+  display: block;
+}
+
+.message-container>.expander>md-icon {
+  font-size: 16px;
+  height: 16px;
+  width: 16px;
 }
 
 @import '@angular/material/core/theming/prebuilt/deeppurple-amber.scss';
