Latest UI Changes

--- a/src/client/app/shared/copa-wci/components/data-field.component.scss
+++ b/src/client/app/shared/copa-wci/components/data-field.component.scss
@@ -11,10 +11,14 @@
 .data-content {
     display: block;
     color: #1F4A7D;
-    font-size: 16px;
-    white-space: nowrap;
+    font-size: 14px;
     overflow-x: hidden;
-    text-overflow: ellipsis;
+    word-break: break-word;
+    &.content-nowrap {
+        word-break: normal;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+    }
     &.content-bold {
         font-weight: 700;
     }
@@ -29,5 +33,5 @@
     white-space: nowrap;
     overflow-x: hidden;
     text-overflow: ellipsis;
-    font-size: 14px;
+    font-size: 13px;
 }
