--- a/src/client/app/components/check-travel-docs/check-travel-docs.component.html
+++ b/src/client/app/components/check-travel-docs/check-travel-docs.component.html
@@ -30,14 +30,14 @@
             <div class="flex-container" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center">
               <div fxFlex class="flex-grid" fxFlexAlign="center" fxFlexAlign.xs="start">
                 <data-field>
-                  <!--<label fxHide.xs data-label>Name</label>-->
-                  <label data-content [isBold]="true">RODRIGUEZDELGADO/ALFONSV</label>
+                  <!--<span fxHide.xs data-label>Name</span>-->
+                  <span data-content [isBold]="true">RODRIGUEZDELGADO/ALFONSV</span>
                 </data-field>
               </div>
               <div fxFlex class="flex-grid" fxFlexAlign="center" fxFlexAlign.xs="start">
                 <data-field>
-                  <!--<label fxHide.xs data-label>Status</label>-->
-                  <label class="flex-center" data-content [isBold]="true" contentColor="#999" [uppercase]="false"><md-icon class="check-icon">check_circle</md-icon> Not Checked In</label>
+                  <!--<span fxHide.xs data-label>Status</span>-->
+                  <span class="flex-center" data-content [isBold]="true" contentColor="#999" [uppercase]="false"><md-icon class="check-icon">check_circle</md-icon> Not Checked In</span>
                 </data-field>
               </div>
             </div>
@@ -74,7 +74,7 @@
             </div>
             <div fxFlex class="flex-grid">
               <md-radio-group>
-                <label class="radio-group-header">Do you have a preassigned ConnectMiles Card?</label>
+                <span class="radio-group-header">Do you have a preassigned ConnectMiles Card?</span>
                 <md-radio-button color="primary" value="1">No</md-radio-button>
                 <div class="seperator-space"></div>
                 <md-radio-button value="2">Yes</md-radio-button>
