--- a/src/client/app/shared/copa-wci/components/alert-message.component.html
+++ b/src/client/app/shared/copa-wci/components/alert-message.component.html
@@ -1,16 +1,16 @@
-<div class="message-container" [class.active]="messages.isMessage()">
+<div class="message-container" role="alert" aria-live="assertive" [class.active]="messages.isMessage()">
   <div class="expander">
     <md-icon>arrow_drop_up</md-icon>
   </div>
-  <div class="message error" *ngFor="let error of messages.getErrorMessages()">
+  <div   class="message error" *ngFor="let error of messages.getErrorMessages()">
     <md-icon>error</md-icon>
     <p>{{error}}</p>
   </div>
-  <div class="message warning" *ngFor="let warning of messages.getWarningMessages()">
+  <div class="message warning"  *ngFor="let warning of messages.getWarningMessages()">
     <md-icon>warning</md-icon>
     <p>{{warning}}</p>
   </div>
-  <div class="message info" *ngFor="let info of messages.getInfoMessages()">
+  <div class="message info"  *ngFor="let info of messages.getInfoMessages()">
     <md-icon>info</md-icon>
     <p>{{info}}</p>
   </div>
