css change in assign-pax-seat page

--- a/src/client/app/components/assign-pax-seat/assign-pax-seat.component.html
+++ b/src/client/app/components/assign-pax-seat/assign-pax-seat.component.html
@@ -125,7 +125,7 @@
 					<span class="seat-type-label">Available</span>
 				</li>
 				<li>
-					<div class="seat-type-image seat-assigned"></div>
+					<div class="seat-type-image seat-assigned">#</div>
 					<span class="seat-type-label">Assigned</span>
 				</li>
 				<li>
